--- a/pages/it-network-solutions.html
+++ b/pages/it-network-solutions.html
@@ -819,8 +819,39 @@
     <script defer src="../assets/js/plugins/popup.js"></script>
     <script defer src="../assets/js/plugins/contact.form.js"></script>
     <script defer src="../assets/js/vendor/bootstrap.min.js"></script>
-    <script defer src="../assets/js/plugins/swiper.js"></script>
-    <script defer src="../assets/js/main.js"></script>
+    <script defer src="../assets/js/plugins/swiper.js"></script>  
+  <!-- ================= GLASSY NAVBAR ON SCROLL (ALL PAGES) ================= -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      // Handle headers on all pages
+      const transparentHeader = document.querySelector('.header-one');
+      const relativeHeader = document.querySelector('.header-relative');
+      const activeHeader = transparentHeader || relativeHeader;
+      
+      if (activeHeader) {
+        // Detect scroll and apply glassy effect
+        window.addEventListener('scroll', function() {
+          if (window.scrollY > 50) {
+            activeHeader.classList.add('sticky');
+          } else {
+            activeHeader.classList.remove('sticky');
+          }
+        });
+      }
+
+      // Smooth scroll for navigation links
+      document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+          e.preventDefault();
+          const target = document.querySelector(this.getAttribute('href'));
+          if (target) {
+            target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+          }
+        });
+      });
+    });
+  </script>
+      <script defer src="../assets/js/main.js"></script>
     <script defer src="../assets/js/mobile-optimizations.js"></script>
     <script defer src="../assets/js/mobile-nav.js"></script>
   </body>
